--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "private": null,
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6"
   },
   "scripts": {
     "watch": "tsc -w",
